--- a/invoices/templates/invoices/dashboard.html
+++ b/invoices/templates/invoices/dashboard.html
@@ -37,7 +37,7 @@
         {% if user.is_authenticated %}
             <a href="{% url 'invoices:manage_dashboard' %}" class="admin-btn">进入管理面板</a>
         {% else %}
-            <a href="{% url 'invoices:manage_login' %}" class="admin-btn">管理员登录</a>
+            <a href="{% url 'invoices:manage_login' %}" class="admin-btn">用户登录</a>
         {% endif %}
     </div>
     <div class="header">525实验室发票管理数据可视化平台</div>
